# rai-latam-demo-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  banking_chat_rai_config.yaml  chat_config.yaml  chat_rai_config.yaml  config.yaml  groq_chat_config.yaml  groq_chat_rai_config.yaml  groq_response_evaluator_config.yaml  interactive_chat.py  pyproject.toml  rai.config.yml  requirements.txt  super-agent.config copy.yml  test_app.py  test_questions_db.json
app/: dependencies.py  main.py
app/models/: schemas.py
app/routers/: api.py  evaluation.py
app/services/: ai_refinery_service.py  air_chat.py  chat.py  evaluation_service.py  evaluators.py  groq_chat.py  harm_evaluator_service.py  langchain_chat.py  langsmith_client.py  langsmith_evaluator.py  llm_manager.py  response_evaluator.py  response_evaluator_service.py
app/utils/: config_loader.py  evaluate.py  risk_analyzer.py
configs/chatbots/: banking_safe.yaml  banking_unsafe.yaml
configs/evaluators/: banking_realtime.yaml  get_langchain_templates.py  llm_evaluators.yaml  response_evaluator.yaml
tests/: test_app.py  test_endpoints.py  test_evaluation_content.py  test_evaluation_format.py  test_evaluation_quality.py  test_evaluator_format.py  test_guardrails_format.py  test_guardrails_quality.py  test_langsmith_integration.py  test_main_endpoints.py
