[tool.poetry]
name = "rai-latam-demo-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = {version = "0.24.0", extras = ["standard"]}
pydantic = "2.5.0"
python-multipart = "0.0.6"
python-dotenv = "1.0.0"
aiofiles = "23.2.1"
httpx = "0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
