[tool.poetry]
name = "rai-latam-demo-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
python-dotenv = "1.0.0"
airefinery-sdk = "1.10.2"
PyYAML = "^6.0"
groq = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
